# server/routes/apiRoutes.mjs
@@ -1,22 +1,24 @@
 import express from 'express';
-import { getSurah, getAllSurahs, getAllVerses, getVerse, getAudio, getVersesByJuz, getSajdaVerses } from '../controllers/surahController.mjs';
+import { getSurah, getAllSurahs, getAllVerses, getVerse, getAudio, getVersesByJuz, getSajdaVerses, getPage } from '../controllers/surahController.mjs';
 import { handleError } from '../utils/errorUtils.mjs'
 const router = express.Router();
 
 
 router.get('/surahs', getAllSurahs);
 
-router.get('/surah', getSurah);
+router.get('/surah/:surah_id?', getSurah);
 
-router.get('/verses', getAllVerses);
+router.get('/verses/:surah_id?', getAllVerses);
 
-router.get('/verse', getVerse);
+router.get('/verse/:surah_id?/:verse_id?', getVerse);
 
 router.get('/sajda', getSajdaVerses);
 
-router.get('/audio', getAudio);
+router.get('/audio/:surah_id?', getAudio);
 
-router.get('/juz', getVersesByJuz);
+router.get('/juz/:juz_id?', getVersesByJuz);
+
+router.get('/pages/:surah_id?/:verse_id?', getPage);
 
 router.use((req, res) => {
     handleError(res, 404, '404 - The requested resource was not found in /api/', {
